--- a/backend/.env
+++ b/backend/.env
@@ -5,3 +5,5 @@ DB_NAME=audio_db
 DB_PASS=Royg2biv
 DB_PORT=5432
 JWT_SECRET=eR4bG+Cp6T4yx5YnSgzMgX9OvnL+rPAfRHpMLFh+ywY=
+
+DATABASE_URL=postgresql://postgres:Royg2biv@localhost:5432/audio_db
